--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port=8090
 
+#Spring Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ENC(WSnW28LE5XOCYqOlZh7ltPmkMw+fjiY9)
+spring.mail.password=ENC(9lZet6gfBp+KLbOxYBWMRuKha0WQcPT4)
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=false
+
+mail.receiver=mariosdrth2005@gmail.com
+
+jasypt.encryptor.password=mariosdrth
