--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,14 @@ spring.mail.properties.mail.debug=false
 mail.receiver=mariosdrth2005@gmail.com
 
 jasypt.encryptor.password=mariosdrth
+
+#keytool -genkeypair -alias mariosdrth -keyalg RSA -keysize 2048 -storetype PKCS12 -keystore email-api.p12 -validity 3650
+
+# The format used for the keystore. for JKS, set it as JKS
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/emailapi.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=email-api
+# The alias mapped to the certificate
+server.ssl.key-alias=emailapi
